# gobject-introspection-tests

./: .gitlab-ci.yml  README.md  annotation.c  annotation.h  drawable.c  drawable.h  foo.c  foo.h  gimarshallingtests.c  gimarshallingtests.h  gimarshallingtestsextra.c  gimarshallingtestsextra.h  gitestmacros.h  gobject-introspection-tests.doap  goblint.toml  meson.build  meson_options.txt  regress.c  regress.h  regressextra.c  regressextra.h  utility.c  utility.h  warnlib.c  warnlib.h
